# court_interpreter

./: .gitignore  README.md  pyproject.toml
court_interpreter/: create_evaluation_set.py  dataset_arrangement.py  dataset_preprocess.py  evaluate.py  evaluate_with_context.py  few_shot_examples.json  heatmap_human_llm.py  heatmap_human_others.py  llm_as_a_judge.py  plot_average.py  plot_bar_for_poster.py  prompt.txt  remap_human_llm.py  significance_test.py  statistics_term_length.py  translate.py  utils.py
dataset/: handbook.tsv  handbook_filtered.tsv  question.tsv
dataset_pre/: chinese.txt  chinese_aligned.txt  english.txt  english_aligned.txt  japanese.txt  japanese_aligned.txt  vietnamese.txt  vietnamese_aligned.txt
output/analysis/heatmap_human_bertscore/: statistics.csv
output/analysis/heatmap_human_bleu/: statistics.csv
output/analysis/heatmap_human_comet/: statistics.csv
output/analysis/heatmap_human_comet_ref_free/: statistics.csv
output/analysis/heatmap_human_llm/: statistics.csv
output/translation/: handbook_evaluation_set_chinese.tsv  handbook_evaluation_set_english.tsv  handbook_evaluation_set_vietnamese.tsv  handbook_filtered-gpt.tsv  handbook_filtered-gpt.tsv_metadata  handbook_filtered-llama.tsv  handbook_filtered-llama.tsv_metadata  question-gpt.tsv  question-gpt.tsv_metadata  question-llama.tsv  question-llama.tsv_metadata  question_evaluation_set.tsv  question_evaluation_set_chinese.tsv  question_evaluation_set_english.tsv  question_evaluation_set_vietnamese.tsv
output/translation/nlp2025/: question-azure.tsv  (+4 more)
tests/: test_translate.py
(+117 files in other folders)
